<resources>
    <string name="app_name">DoIt</string>

    <string name="empty_view_text">我的胃空空如也</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">电话号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">电话号码不正确，请重新输入</string>
    <string name="error_invalid_password">密码不能少于6位</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="register_user"><u>没有帐号？点我注册</u></string>
    <string name="enter_code">请输入您的验证码</string>
    <string name="new_password_text">请输入新密码</string>
    <string name="find_password_phone_text">请输入您的手机号码</string>
    <string name="register_name">请输入您的用户名</string>
    <string name="register_password">请输入密码</string>
    <string name="register_phone">请输入您的手机号码</string>
    <string name="register_button_text">注 册</string>
    <string name="register_button_error">注册失败</string>
    <string name="register_button_complete">注册成功</string>
</resources>
